# avrogen

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: rust.yml
src/: browse_sub_schemas.rs  error.rs  file_parser.rs  generated_schema.rs  lib.rs  main.rs  source.rs  writers.rs
src/generated_schema/: field.rs  field_default_value.rs  field_type.rs  global.rs  namespace.rs  schema.rs
src/writers/: structured_file_writer.rs
test_schemas/: recursive_record.avsc  simple_enum.avsc  simple_record.avsc
test_schemas/recursive_record/expected/: com.rs
test_schemas/recursive_record/expected/com/: my_site.rs
test_schemas/recursive_record/expected/com/my_site/: machines.rs
test_schemas/simple_enum/expected/: geo.rs
test_schemas/simple_record/expected/: first.rs
tests/: compare.rs  enum_test.rs
