[package]
name = "avrogen"
authors = ["polo-asm"]
version = "0.1.2"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "This program allow allow to generate rust code from avro definition files. Modules are created from namespace information"
homepage = "https://github.com/polo-asm/avrogen"
repository= "https://github.com/polo-asm/avrogen"
readme= "Readme.md"
keywords = ["avro", "code-generation", "cli", "serde" ]
categories = ["command-line-utilities", "development-tools::build-utils" ]

[dependencies]
apache-avro = { version = "0.16" }
serde = { version = "1" }
heck = "0.4"
derive_more = "0.99.18"
serde_json = "1.0.122"
clap = { version = "4.5.15", features = ["derive"] }
log = { version = "0.4.22", features = ["max_level_debug","release_max_level_debug"] }
colog = "1.3.0"
clap-verbosity = "2.1.0"
glob = "0.3.1"

#uuid = { version = "1.10.0" }
#chrono = { version = "0.4.38", features = ["serde"] }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
